[gd_scene format=3 uid="uid://csjjjpqkuvkc3"]

[ext_resource type="Script" uid="uid://ca7kmxxev5j8e" path="res://ui/settings-screen/settings_screen.gd" id="1_oddw1"]
[ext_resource type="FontFile" uid="uid://3uh7uwwtg1yw" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_t3yuk"]
[ext_resource type="Texture2D" uid="uid://cbedjnusf0roi" path="res://assets/sprites/close.png" id="3_t3yuk"]

[node name="SettingsScreen" type="Control" unique_id=550638049]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oddw1")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="." unique_id=1620614119]
layout_mode = 0
offset_right = 600.0
offset_bottom = 400.0
color = Color(0.23529412, 0.23529412, 0.23529412, 1)

[node name="Label" type="Label" parent="." unique_id=284979069]
layout_mode = 0
offset_right = 600.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_t3yuk")
theme_override_font_sizes/font_size = 20
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="." unique_id=196590838]
layout_mode = 0
offset_left = 63.0
offset_top = 87.0
offset_right = 159.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("2_t3yuk")
text = "AUDIO:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="." unique_id=1250019596]
layout_mode = 0
offset_left = 165.0
offset_top = 89.0
offset_right = 422.0
offset_bottom = 105.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="CloseButton" type="Button" parent="." unique_id=1777307631]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.75, 0.75)
icon = ExtResource("3_t3yuk")

[node name="Label3" type="Label" parent="." unique_id=99431960]
layout_mode = 0
offset_left = 78.0
offset_top = 130.0
offset_right = 174.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("2_t3yuk")
text = "SFX:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="." unique_id=554483622]
layout_mode = 0
offset_left = 64.0
offset_top = 173.0
offset_right = 160.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("2_t3yuk")
text = "MUSIC:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="." unique_id=851445530]
layout_mode = 0
offset_left = 168.0
offset_top = 132.0
offset_right = 425.0
offset_bottom = 148.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeSlider" type="HSlider" parent="." unique_id=198978235]
layout_mode = 0
offset_left = 168.0
offset_top = 175.0
offset_right = 425.0
offset_bottom = 191.0
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
